update filtrados, documentacion API
Ahora los turnos retornados estan disponibles. Ademas se actualizo la documentacion de la API de estos metodos.
